docs(learning): teach Java stage 4, concurrency
Seven lessons, 0022 to 0028, plus reference/concurrency.md and eleven
glossary terms. The stage covers threads, the memory model, mutual
exclusion, concurrent collections and atomics, executors and futures,
virtual threads, and choosing a model.

Written under two rules the earlier stages did not need: reproduce every
race and say how many attempts it took, and report honestly when a race
does not reproduce. Both earned their place, and three demonstrations
came out other than expected because of them.

Lesson 0023 is the anchor. It contains a directly observed reordering,
which most writing on the subject says not to expect to see: a
store-buffering test produced an outcome impossible under sequential
consistency on ninety-five to ninety-eight per cent of five million
rounds, and marking the two fields volatile took that to zero on the
same five million.

The stalest claim in the stage came from a JEP rather than a book.

synchronized no longer pins a carrier thread. Measured against a
genuine two-worker platform pool as a control, virtual threads holding
a monitor across a blocking sleep finished in about half a second where
the pinned control took about twelve and a half, and Object.wait inside
synchronized behaves the same way. JEP 491 made this change in JDK 24.
JEP 444's own text still says synchronized pins, along with its
corollary advice to move onto ReentrantLock for that reason, and lesson
0027 says plainly that the advice is stale. A blocking native call made
through the Foreign Function and Memory API does still pin, and matched
the control exactly.

The diagnostic built for pinning does not catch the remaining case. The
jdk.VirtualThreadPinned flight-recorder event reported zero for the
native call that demonstrably pinned, because it fires on a failed
unmount attempt and a plain native call never attempts one. It agrees
with the timing in the three cases where pinning does not happen and is
useless in th